# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import questionsRouter from "./questions";
+import responsesRouter from "./responses";
+import profileRouter from "./profile";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(questionsRouter);
+router.use(responsesRouter);
+router.use(profileRouter);
+router.use(statsRouter);
 
 export default router;
